Z-index fix.

--- a/css/shop.css
+++ b/css/shop.css
@@ -860,7 +860,7 @@ h2 .sold {
   font-size: inherit;
   cursor: inherit;
   line-height: inherit;
-  z-index: 1;
+  z-index: 0;
   outline: none;
 }
 .filter select::-ms-expand {
